@@ -47,3 +47,6 @@ PROCESS_PREDICTOR_CMD=python
 ENCODEC_PRETRAINED=facebook/encodec_24khz
 ENCODEC_BANDWIDTH=24
 ENCODEC_BATCHSIZE=640
+
+
+MINHASH_BANDSIZE=2
