@@ -9,10 +9,11 @@ import { hideBin } from "yargs/helpers";
 
 import "../env";
 
-import { DATA_DIR } from "./libs/constants";
+import { DATA_DIR, MINHASH_BANDSIZE } from "./libs/constants";
 import walkDir from "./libs/walkDir";
 import * as midiHash from "./libs/midiHash";
 import { idRange2Filter } from "./libs/utils";
+import * as minhashSerializer from "./libs/minhashSerializer";
 
 
 
@@ -60,6 +61,8 @@ const main = () => {
 	let n_saCluster = 0;	// sheet - audio cluster
 	let n_work = 0;
 
+	const hashLib = {} as Record<string, Record<string, string>>;
+
 	for (const work of works) {
 		const workId = path.basename(work);
 		const fileDirs = walkDir(work, /\/$/);
@@ -72,7 +75,9 @@ const main = () => {
 		const hashes = midiFiles.map(file => hashMidiFile(file, work));
 		//console.log("hashes:", hashes);
 
-		const index = new LshIndex();
+		hashLib[workId] = hashes.reduce((dict, {key, hash}) => ({...dict, [key]: minhashSerializer.stringify(hash)}), {});
+
+		const index = new LshIndex({bandSize: MINHASH_BANDSIZE});
 		hashes.forEach(hash => index.insert(hash.key, hash.hash));
 
 		// clustering
@@ -105,6 +110,8 @@ const main = () => {
 			midiClusters: clusters,
 		}));
 	}
+
+	fs.writeFileSync(path.join(DATA_DIR, "midi-hash.yaml"), YAML.stringify(hashLib));
 
 	console.log("Done,", `${n_saCluster}/${n_cluster}`, "clusters found in", n_work, "works.");
 }
